--- a/buzr/package.json
+++ b/buzr/package.json
@@ -16,8 +16,12 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-document-picker": "^9.0.1",
+    "react-native-dropdown": "^0.0.6",
+    "react-native-element-dropdown": "^2.10.0",
     "react-native-svg": "13.9.0",
-    "react-native-svg-transformer": "^1.1.0"
+    "react-native-svg-transformer": "^1.1.0",
+    "expo-document-picker": "~11.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
