--- a/buzr/package.json
+++ b/buzr/package.json
@@ -21,7 +21,8 @@
     "react-native-element-dropdown": "^2.10.0",
     "react-native-svg": "13.9.0",
     "react-native-svg-transformer": "^1.1.0",
-    "expo-document-picker": "~11.5.4"
+    "expo-document-picker": "~11.5.4",
+    "expo-av": "~13.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
